# characterizing-pinns-failure-modes

./: LICENSE  Legal.txt  README.md  license.txt  pyproject.toml  requirements.txt
pbc_examples/: choose_optimizer.py  main_pbc.py  net_pbc.py  systems_pbc.py  utils.py  visualize.py
