[tool.poetry]
name = "characterizing-pinns-failure-modes"
version = "0.1.0"
description = "Characterizing possible failure modes in physics-informed neural networks"
authors = ["Aditi Krishnapriyan <akrishnapriyan@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
torch = "^1.7.1"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
torch_optimizer = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
